# new_project

./: .gitignore  bot.ini  pyproject.toml  run.py
migration/: env.py
migration/versions/: 9db6053366ed_третий_коммит.py  ab8a78285404_второй_коммит.py  fa49269e2f85_первый_коммит.py
src/: __init__.py  bot.py
src/tgbot/: config.py
src/tgbot/database/: connect.py
src/tgbot/database/models/: user.py
src/tgbot/handlers/: __init__.py  start.py
src/tgbot/middlewares/: __init__.py  registered_mdlw.py  session_mdlw.py
src/tgbot/services/: data_access_object.py
