[project]
name = "Project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Reminta", email = "rodionovaa.nastya2008@gmail.com"},
]
dependencies = ["python-dotenv>=1.1.1", "asyncpg-lite>=0.3.1.3", "python-decouple>=3.8", "aiogram>=3.20.0.post0", "pydantic>=2.11.7", "pydantic-settings>=2.10.1", "aioinject>=1.4.2", "aio-pika>=9.5.5", "alembic>=1.16.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
